Added components, styles and integrated redux.

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,6 +3,7 @@ body {
   padding: 0;
   font-family: -apple-system, system-ui, BlinkMacSystemFont, 'Segoe UI', Roboto,
     'Helvetica Neue', Arial, sans-serif;
+  overflow-y: hidden;
 }
 
 .App {
@@ -21,4 +22,29 @@ img {
 
 .App:hover > img {
   transform: rotate(1080deg);
+}
+
+.wrapper {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+}
+
+.gridItem {
+  background-color: rgba(255, 255, 255, 0.8);
+  border: 1px solid rgba(0, 0, 0, 0.8);
+  padding: 20px;
+  text-align: center;
+}
+
+.header {
+  box-sizing: border-box;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: baseline;
+  padding: 1em;
+  margin-bottom: 2em;
+  background-color: rgb(26, 126, 192);
+  color: #fff;
 }
