--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,6 +4,7 @@ body {
   font-family: -apple-system, system-ui, BlinkMacSystemFont, 'Segoe UI', Roboto,
     'Helvetica Neue', Arial, sans-serif;
   overflow-y: hidden;
+  overflow-x: hidden;
 }
 
 .App {
@@ -14,10 +15,26 @@ body {
   margin: 2rem auto;
 }
 
-img {
+.imgUserList {
   transition: 3s;
-  height: 100px;
-  width: 100px;
+  height: 76px;
+  width: 76px;
+  margin-right: 12px;
+}
+
+.userCardList {
+  float: left;
+}
+
+.username {
+  display: flex;
+  color: #262626;
+  font-weight: bold;
+  font-size: 18px;
+}
+
+.teamData {
+  margin-top: 6px;
 }
 
 .App:hover > img {
@@ -25,26 +42,91 @@ img {
 }
 
 .wrapper {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 10px;
+  display: block;
+  width: 100%;
+}
+
+.headerLogoContainer {
+  text-align: center;
+  position: relative;
+}
+
+.headerLogoImage {
+  height: 50px;
+  margin-right: 12px;
+}
+
+.headerLogoText {
+  position: absolute;
+  top: 17px;
+  font-size: 24px;
+}
+
+.cardLogo {
+  display: block;
+  margin-top: 18px;
+  float: left;
+}
+
+.cardLogoGithub {
+  width: 15px;
+  height: 12px;
+  float: left;
+  opacity: 0.4;
+  margin-right: 7px;
+}
+
+.userListFooterContainer {
+  margin-top: 20px;
+  border-top: 1px solid #F5F5F5;
+  margin-left: -19px;
+  margin-right: -19px;
+}
+
+.userListDetailContainer {
+  width: 100%;
+  display: inline-block;
+}
+
+.logoText {
+  font-size: 12px;
+  color: #999999;
+  display: inline-flex;
+  margin-left: 0px;
 }
 
 .gridItem {
   background-color: rgba(255, 255, 255, 0.8);
-  border: 1px solid rgba(0, 0, 0, 0.8);
   padding: 20px;
   text-align: center;
+  width: 27%;
+  float: left;
+  margin-left: 20px;
+  margin-bottom: 20px;
+  border-radius: 4px;
+}
+
+.gridItem {
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 20px;
+  text-align: center;
+  float: left;
+  margin-left: 20px;
+  margin-bottom: 20px;
+}
+
+@media screen and (max-width: 1130px) {
+  .gridItem {
+    width: 27%;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .gridItem {
+    width: 41%;
+  }
 }
 
 .header {
-  box-sizing: border-box;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: baseline;
-  padding: 1em;
-  margin-bottom: 2em;
-  background-color: rgb(26, 126, 192);
-  color: #fff;
+  padding: 20px;
 }
