--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,8 +1,8 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, system-ui, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    'Helvetica Neue', Arial, sans-serif;
+  font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, sans-serif;
   overflow-y: hidden;
   overflow-x: hidden;
 }
@@ -19,6 +19,13 @@ body {
   transition: 3s;
   height: 76px;
   width: 76px;
+  margin-right: 12px;
+}
+
+.imgUserListHistory {
+  transition: 3s;
+  height: 36px;
+  width: 36px;
   margin-right: 12px;
 }
 
@@ -78,7 +85,7 @@ body {
 
 .userListFooterContainer {
   margin-top: 20px;
-  border-top: 1px solid #F5F5F5;
+  border-top: 1px solid #f5f5f5;
   margin-left: -19px;
   margin-right: -19px;
 }
@@ -118,6 +125,12 @@ body {
 @media screen and (max-width: 1130px) {
   .gridItem {
     width: 27%;
+  }
+}
+
+@media screen and (min-width: 1131px) {
+  .gridItem {
+    width: 40%;
   }
 }
 
