Added header changes.

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -121,6 +121,11 @@ body {
   float: left;
 }
 
+.backContainer {
+  float: left;
+  margin-top: 16px;
+}
+
 /* .gridItem {
   background-color: rgba(255, 255, 255, 0.8);
   padding: 20px;
